# taffnaidphotos

./: .gitignore  README.md  pyproject.toml  taffnaid.photos.tf  taffnaidphotos.css  taffnaidphotos.py  taffnaidphotos.tf
lambda/: list-nav.html  list.html  preview.html  taffnaidphotos.py  view-nav.html  view.html
terraform/: cloudfront.tf  iam.tf  lambda_function.tf  provider.tf  route53.tf  s3_bucket.tf  s3_object.tf  taffnaidphotos.tf
tests/: conftest.py  test_taffnaidphotos.py
utilities/: generate.py
web/: 404.html  taffnaidphotos.css  taffnaidphotos.js
